--- a/package.json
+++ b/package.json
@@ -20,18 +20,12 @@
         "src"
     ],
     "scripts": {
-        "start": "tsdx watch --onSuccess \"yalc push\"",
-        "build": "tsdx build",
-        "test": "tsdx test",
-        "lint": "tsdx lint",
-        "prepare": "tsdx build",
-        "clean": "jest --clearCache",
-        "watch": "tsdx watch",
+        "start": "tsc-watch --onSuccess \"npx yalc publish\"",
+        "build": "tsc",
         "docs": "yarn docs:md ; yarn docs:clean",
         "docs:md": "yarn typedoc --plugin typedoc-plugin-markdown --entryDocument index.md --hideBreadcrumbs true --namedAnchors false --out docs/md",
         "docs:html": "yarn typedoc --plugin none --out docs/app src/index.ts ",
-        "docs:clean": "node ./scripts/docsFindAndReplace.js ; node ./scripts/docsCleanup.js",
-        "prepublishOnly": "npm run build"
+        "docs:clean": "node ./scripts/docsFindAndReplace.js ; node ./scripts/docsCleanup.js"
     },
     "peerDependencies": {},
     "dependencies": {
@@ -39,13 +33,14 @@
         "ethereum-multicall": "^2.17.0",
         "ethers": "^5.5.1",
         "graphql-request": "^6.0.0",
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "tsc": "^2.0.4",
+        "tsc-watch": "^6.0.4"
     },
     "devDependencies": {
         "@types/node": "^16.11.7",
         "debug": "^4.3.2",
         "replace-in-files": "^3.0.0",
-        "tsdx": "^0.14.1",
         "tslib": "^2.5.0",
         "typedoc": "^0.22.10",
         "typedoc-plugin-markdown": "^3.11.8",
