--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,47 +1,28 @@
 {
-  // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-  "include": [
-    "./src", 
-    "types"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules"
-  ],
-  "typedocOptions": {
-      "entryPoints": ["./src/index.ts"],
-      "out": "docs",
-      "readme": "DOCUMENTATION.md",
-  },
-  "compilerOptions": {
-    "outDir": "./dist",
-    "resolveJsonModule": true,
-    "module": "esnext",
-    "lib": ["dom", "esnext"],
-    "importHelpers": true,
-    // output .d.ts declaration files for consumers
-    "declaration": true,
-    // output .js.map sourcemap files for consumers
-    "sourceMap": true,
-    // match output dir to input dir. e.g. dist/index instead of dist/src/index
-    "rootDir": "./src",
-    // stricter type-checking for stronger correctness. Recommended by TS
-    "strict": true,
-    // linter checks for common issues
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    // noUnused* overlap with @typescript-eslint/no-unused-vars, can disable if duplicative
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    // use Node's module resolution algorithm, instead of the legacy TS one
-    "moduleResolution": "node",
-    // transpile JSX to React.createElement
-    "jsx": "react",
-    // interop between ESM and CJS modules. Recommended by TS
-    "esModuleInterop": true,
-    // significant perf increase by skipping checking .d.ts files, particularly those in node_modules. Recommended by TS
-    "skipLibCheck": true,
-    // error out if import and file system have a casing mismatch. Recommended by TS
-    "forceConsistentCasingInFileNames": true
-  }
+ "compilerOptions": {
+   "outDir": "./dist",
+   "module": "ESNext",
+   "declaration": true,
+   "noImplicitAny": false,
+   "removeComments": true,
+   "noLib": false,
+   "emitDecoratorMetadata": true,
+   "experimentalDecorators": true,
+   "resolveJsonModule": true,
+   "esModuleInterop": true,
+   "moduleResolution": "node",
+   "target": "es6",
+   "sourceMap": true,
+   "lib": [
+     "es6",
+     "dom"
+   ],
+ },
+ "include": [
+   "./src"
+ ],
+ "exclude": [
+   "dist",
+   "node_modules"
+ ]
 }
