--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,20 @@
 {
- "compilerOptions": {
-   "outDir": "./dist",
-   "module": "ESNext",
-   "declaration": true,
-   "noImplicitAny": false,
-   "removeComments": true,
-   "noLib": false,
-   "emitDecoratorMetadata": true,
-   "experimentalDecorators": true,
-   "resolveJsonModule": true,
-   "esModuleInterop": true,
-   "moduleResolution": "node",
-   "target": "es6",
-   "sourceMap": true,
-   "lib": [
-     "es6",
-     "dom"
-   ],
- },
- "include": [
-   "./src"
- ],
- "exclude": [
-   "dist",
-   "node_modules"
- ]
+  "include": ["src", "types"],
+  "typedocOptions": {
+      "entryPoints": ["./src/index.ts"],
+      "out": "docs",
+      "readme": "DOCUMENTATION.md",
+  },
+  "compilerOptions": {
+    "declaration": true,
+    "importHelpers": false,
+    "module": "commonjs",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "target": "esnext",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+  }
 }
