--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "peerDependencies": {},
     "dependencies": {
         "@pooltogether/contract-list-schema": "^0.1.4",
+        "axios": "^1.4.0",
         "ethereum-multicall": "^2.17.0",
         "ethers": "^5.5.1",
         "graphql": "^16.6.0",
@@ -40,6 +41,7 @@
     "devDependencies": {
         "@types/node": "^16.11.7",
         "debug": "^4.3.2",
+        "prettier": "^2.8.8",
         "replace-in-files": "^3.0.0",
         "tslib": "^2.5.0",
         "typedoc": "^0.22.10",
