--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
         "ethers": "^5.5.1",
         "graphql": "^16.6.0",
         "graphql-request": "^6.0.0",
-        "lodash": "^4.17.21",
         "tsc": "^2.0.4",
         "tsc-watch": "^6.0.4"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.195",
         "@types/node": "^20.2.5",
         "debug": "^4.3.2",
+        "lodash": "^4.17.21",
         "prettier": "^2.8.8",
         "replace-in-files": "^3.0.0",
         "tslib": "^2.5.0",
