--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "Utility library for PoolTogether V5 off-chain computations.",
     "author": "PoolTogether Inc",
     "license": "GPL-3.0-only",
-    "version": "0.0.1-beta.14",
+    "version": "0.0.1-beta.16",
     "homepage": "https://github.com/pooltogether/v5-utils-js",
     "bugs": {
         "url": "https://github.com/pooltogether/issues",
@@ -29,24 +29,24 @@
     "peerDependencies": {},
     "dependencies": {
         "@pooltogether/contract-list-schema": "^0.1.4",
+        "@types/lodash": "^4.14.195",
         "axios": "^1.4.0",
         "ethereum-multicall": "^2.17.0",
         "ethers": "^5.5.1",
         "graphql": "^16.6.0",
         "graphql-request": "^6.0.0",
+        "lodash": "^4.17.21",
         "tsc": "^2.0.4",
-        "tsc-watch": "^6.0.4"
+        "tsc-watch": "^6.0.4",
+        "typescript": "^5.0.4"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.195",
         "@types/node": "^20.2.5",
         "debug": "^4.3.2",
-        "lodash": "^4.17.21",
         "prettier": "^2.8.8",
         "replace-in-files": "^3.0.0",
         "tslib": "^2.5.0",
         "typedoc": "^0.24.7",
-        "typedoc-plugin-markdown": "^3.15.3",
-        "typescript": "^5.0.4"
+        "typedoc-plugin-markdown": "^3.15.3"
     }
 }
