--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "axios": "^1.4.0",
         "ethereum-multicall": "^2.17.0",
         "ethers": "^5.5.1",
+        "ethers-multicall-provider": "^3.0.3",
         "graphql": "^16.6.0",
         "graphql-request": "^6.0.0",
         "lodash": "^4.17.21",
