--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "dependencies": {
         "@pooltogether/contract-list-schema": "^0.1.4",
         "@types/lodash": "^4.14.195",
-        "axios": "^1.4.0",
         "ethereum-multicall": "^2.17.0",
         "ethers": "^5.5.1",
         "ethers-multicall-provider": "^3.0.3",
         "graphql": "^16.6.0",
         "graphql-request": "^6.0.0",
         "lodash": "^4.17.21",
+        "node-fetch": "^2.6.11",
         "tsc": "^2.0.4",
         "tsc-watch": "^6.0.4",
         "typescript": "^5.0.4"
